--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -41,4 +41,27 @@ jobs:
         AWS_REGION: us-east-1
         SOURCE_DIR: ./client/dist
         ARGS: "--acl public-read"
+  deploy_server:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: redtius/laravel-example:latest
+
+    
+
 
