--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -48,6 +48,7 @@ jobs:
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
+        working-directory: ./server
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
