--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -43,12 +43,14 @@ jobs:
         ARGS: "--acl public-read"
   deploy_server:
     runs-on: ubuntu-latest
+    defaults:
+    run:
+      working-directory: ./server
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        working-directory: ./server
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
