--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -43,15 +43,14 @@ jobs:
         ARGS: "--acl public-read"
   deploy_server:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./server
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        env:
+          DOCKER_CONFIG: "./server"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
