--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -47,22 +47,22 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        env:
-          DOCKER_CONFIG: "./server"
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
-          tags: redtius/laravel-example:latest
+          file: ./server/.docker/Dockerfile
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:latest
 
     
 
