--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./server
           push: true
           file: ./server/.docker/Dockerfile
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:latest
