--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           context: ./server
           push: true
-          file: ./server/.docker/Dockerfile
+          file: .docker/Dockerfile
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:latest
 
     
