--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -44,25 +44,22 @@ jobs:
   deploy_server:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+    - name: Checkout Code
+      uses: actions/checkout@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: ./server
-          push: true
-          file: .docker/Dockerfile
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:latest
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: ./server
+        file: .docker/Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:latest
 
     
 
