--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -57,7 +57,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: ./server
-        file: .docker/Dockerfile
+        file: Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:latest
 
