--- a/server/.docker/Dockerfile
+++ b/server/.docker/Dockerfile
@@ -1,7 +1,13 @@
 # Dockerfile
 FROM php:8.3.6-cli
 
-RUN apt-get update -y && apt-get install -y libmcrypt-dev
+RUN apt-get update && apt-get install -y \
+    libzip-dev \
+    zip
+
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
+RUN docker-php-ext-install pdo_mysql zip
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 RUN docker-php-ext-install pdo mbstring
