--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -61,20 +61,20 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:latest
     
-    - name: Configure AWS credentials
-      id: creds
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.KEY_ID }}
-        aws-secret-access-key: ${{ secrets.ACCESS_KEY }}
-        aws-region: us-east-1
+    # - name: Configure AWS credentials
+    #   id: creds
+    #   uses: aws-actions/configure-aws-credentials@v1
+    #   with:
+    #     aws-access-key-id: ${{ secrets.KEY_ID }}
+    #     aws-secret-access-key: ${{ secrets.ACCESS_KEY }}
+    #     aws-region: us-east-1
 
-    - name: Deploy to AWS CloudFormation
-      uses: aws-actions/aws-cloudformation-github-deploy@v1
-      with:
-        name: Laravel-Example
-        template: ./server/cloudformation/infra.yml
-        parameter-overrides: "DbUser=${{ secrets.DBUSER }},DbPassword=${{ secrets.DBPASSWORD }}"
+    # - name: Deploy to AWS CloudFormation
+    #   uses: aws-actions/aws-cloudformation-github-deploy@v1
+    #   with:
+    #     name: Laravel-Example
+    #     template: ./server/cloudformation/infra.yml
+    #     parameter-overrides: "DbUser=${{ secrets.DBUSER }},DbPassword=${{ secrets.DBPASSWORD }}"
 
     
 
