updated dockerfile again

--- a/server/.docker/Dockerfile
+++ b/server/.docker/Dockerfile
@@ -4,28 +4,32 @@ FROM php:8.3-apache
 # Enable Apache mod_rewrite
 RUN a2enmod rewrite
 
-# Install PHP extensions and other dependencies
+# Set the working directory
+WORKDIR /app
+
+# Install PHP extensions
 RUN apt-get update -y && apt-get install -y \
     libpng-dev \
     libjpeg-dev \
-    libfreetype6-dev \
+    libfreetype6-dev\
     zlib1g-dev \
     libpq-dev \
-    zip \
-    unzip
-
+    zip unzip
 # Configure and install PHP extensions
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install gd pdo pdo_pgsql
 
-# Copy your application's code to the image
-COPY . /var/www/html
+# Copy your applications code to the image
+COPY .. /var/www/html
 
-# Adjust permissions
-RUN chown -R www-data:www-data /var/www/html \
+# Copy over and run the composer install command
+# COPY --from=composer /usr/bin/composer /usr/bin/composer
+RUN composer install --no-dev
+
+# Adjust the permissions
+RUN chown -R www-data:www-data /var/www \
     && chmod -R 775 /var/www/html/storage
 
 # Expose port 80 and start Apache
 EXPOSE 80
 CMD ["apache2-foreground"]
-
