--- a/server/.docker/Dockerfile
+++ b/server/.docker/Dockerfile
@@ -24,7 +24,7 @@ COPY .. /var/www/html
 
 # Copy over and run the composer install command
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-RUN composer install --no-dev
+RUN composer install
 
 # Adjust the permissions
 RUN chown -R www-data:www-data /var/www \
