--- a/server/.docker/Dockerfile
+++ b/server/.docker/Dockerfile
@@ -18,10 +18,11 @@ RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
 
 # Copy your applications code to the image
 COPY .. /var/www/html
+WORKDIR /var/www/html
 
 # Copy over and run the composer install command
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-RUN composer install
+RUN composer install --no-dev
 
 # Adjust the permissions
 RUN chown -R www-data:www-data /var/www \
