--- a/server/.docker/Dockerfile
+++ b/server/.docker/Dockerfile
@@ -16,6 +16,10 @@ RUN apt-get update -y && apt-get install -y \
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install gd pdo pdo_pgsql
 
+ENV APACHE_DOCUMENT_ROOT=/var/www/html/public
+RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
+RUN sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
+
 # Copy your applications code to the image
 COPY .. /var/www/html
 WORKDIR /var/www/html
@@ -24,9 +28,8 @@ WORKDIR /var/www/html
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 RUN composer install --no-dev
 
-# Adjust the permissions
-RUN chown -R www-data:www-data /var/www \
-    && chmod -R 775 /var/www/html/storage
+# Adjust permissions
+RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
 
 # Expose port 80 and start Apache
 EXPOSE 80
