--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -74,6 +74,7 @@ jobs:
       with:
         name: Laravel-Example
         template: ./server/cloudformation/infra.yml
+        capabilities: CAPABILITY_NAMED_IAM
         parameter-overrides: "DbUser=${{ secrets.DBUSER }},DbPassword=${{ secrets.DBPASSWORD }}"
 
     
