updated RDS subnetGroup

--- a/server/cloudformation/infra.yml
+++ b/server/cloudformation/infra.yml
@@ -249,8 +249,8 @@ Resources:
     Properties:
       DBSubnetGroupDescription: "Subnet group for RDS"
       SubnetIds:
-        - !Ref "PrivateSubnetOne"
-        - !Ref "PrivateSubnetTwo"
+        - !Ref "PublicSubnetOne"
+        - !Ref "PublicSubnetTwo"
 
     ############################################################
   #              RDS Database
